# ndi-router

./: Cargo.toml  README.md  build.rs
config/: log4rs.yaml
src/: main.rs  peer.rs  shared.rs  videohub.rs
src/ndi/: mod.rs  ndisys.rs
