[package]
name = "ndi-router"
version = "1.0.0"
authors = ["Luke Moscrop <luke.moscrop@bbc.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
futures = "0.3.0"
log4rs = "0.9.0"
log = { version = "0.4.0", features = ["std"] }